...
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:id="@+id/bottom_sheet_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
...
                        android:scrollHorizontally="true"
                        android:text="@string/map_frag_bottomsheet_inp_dialog_dc_title_hint"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"/>

                <EditText
                        android:id="@+id/bottom_sheet_input_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:inputType="textVisiblePassword"
                        android:lines="1"
...
                        android:paddingEnd="8dp"
                        android:text="@string/map_frag_bottomsheet_inp_dialog_dc_location_hint"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"/>

                <EditText
                        android:id="@+id/bottom_sheet_input_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
...
                        android:text="@string/map_frag_bottomsheet_inp_dialog_dc_policyholder_hint"
                        android:textColorLink="@android:color/transparent"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"/>

                <EditText
                        android:id="@+id/bottom_sheet_input_policyholder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
...
                        android:paddingEnd="8dp"
                        android:text="@string/map_frag_bottomsheet_inp_dialog_dc_expert_hint"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"/>

                <EditText
                        android:id="@+id/bottom_sheet_input_expert"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
...
